Enable FlingSchedulerMac

Enable tests that were disabled because of this functionality missing.

Bug: 842325
Change-Id: I6f540460f4e5f81d7ff8dd36e4abf369f0bd4785
Reviewed-on: https://chromium-review.googlesource.com/1149612
Reviewed-by: Jonathan Ross <jonross@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577957}
Former-commit-id: d6ec81545fea9d795fe5655d8453c343bc61420a